mutants.out/log/src__proto__client__ent.rs_line_38_col_9_004.log

*** src/proto/client/ent.rs:38:9: replace Client<S>::open_batch -> Result<Option<BatchHandle<'_, S>>, Error> with Ok(Some(BatchHandle::from_iter([Default::default()])))

*** mutation diff:
--- src/proto/client/ent.rs
+++ replace Client<S>::open_batch -> Result<Option<BatchHandle<'_, S>>, Error> with Ok(Some(BatchHandle::from_iter([Default::default()])))
@@ -30,18 +30,17 @@
         Ok(BatchHandle::new(bid, self))
     }
 
     /// Open an already existing batch of jobs.
     ///
     /// This will not error if a batch with the provided `bid` does not exist,
     /// rather `Ok(None)` will be returned.
     pub async fn open_batch(&mut self, bid: BatchId) -> Result<Option<BatchHandle<'_, S>>, Error> {
-        let bid = self.issue(&OpenBatch::from(bid)).await?.maybe_bid().await?;
-        Ok(bid.map(|bid| BatchHandle::new(bid, self)))
+        Ok(Some(BatchHandle::from_iter([Default::default()]))) /* ~ changed by cargo-mutants ~ */
     }
 
     pub(crate) async fn commit_batch(&mut self, bid: BatchId) -> Result<(), Error> {
         self.issue(&CommitBatch::from(bid)).await?.read_ok().await
     }
 }
 
 impl<'a, S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send> ReadToken<'a, S> {


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
    Finished dev [unoptimized + debuginfo] target(s) in 1.01s

*** result: Success

*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo test --manifest-path /tmp/cargo-mutants-faktory-rs-3ziugm.tmp/Cargo.toml --locked --all-features --all-targets
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-3ziugm.tmp)
error[E0599]: no function or associated item named `from_iter` found for struct `BatchHandle` in the current scope
  --> src/proto/client/ent.rs:38:30
   |
38 |         Ok(Some(BatchHandle::from_iter([Default::default()]))) /* ~ changed by cargo-mutants ~ */
   |                              ^^^^^^^^^ function or associated item not found in `BatchHandle<'_, _>`
   |
  ::: src/proto/batch/handle.rs:6:1
   |
6  | pub struct BatchHandle<'a, S: AsyncBufReadExt + AsyncWriteExt + Unpin + Send> {
   | ----------------------------------------------------------------------------- function or associated item `from_iter` not found for this struct
   |
note: if you're trying to build a new `BatchHandle<'_, _>`, consider using `BatchHandle::<'a, S>::new` which returns `BatchHandle<'_, S>`
  --> src/proto/batch/handle.rs:17:5
   |
17 |     pub(crate) fn new(bid: BatchId, c: &mut Client<S>) -> BatchHandle<'_, S> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `from_iter`, perhaps you need to implement it:
           candidate #1: `FromIterator`

For more information about this error, try `rustc --explain E0599`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
